# forge-kaif

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  forge.schema.json  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md  performance.md  security.md
.github/scripts/: check_benchmarks.py
.github/workflows/: benchmark.yml  ci.yml  docs.yml  lint.yml  publish.yml  security.yml  test.yml
benchmarks/: conftest.py  test_bench_ai.py  test_bench_config.py  test_bench_health.py  test_bench_init.py  test_bench_log.py  test_bench_retry.py
docs/: mkdocs.yml
docs/docs/: faq.md  index.md  why-forge.md
docs/docs/api/: ai.md  cache.md  config.md  core.md  crud.md  events.md  featureflags.md  health.md  jobs.md  log.md  retry.md  storage.md  validation.md
docs/docs/getting-started/: index.md
docs/docs/guides/: ai-agents.md  custom-module.md  deployment.md  fastapi.md  testing.md
docs/docs/modules/: ai.md  cache.md  config.md  health.md  log.md  retry.md  validation.md
docs/docs/recipes/: ai-fallback.md  rate-limiting.md  secrets-in-production.md  structured-outputs.md
docs/docs/stylesheets/: extra.css
examples/ai-chatbot/: .env.example  README.md  forge.config.toml  requirements.txt
examples/ai-chatbot/chatbot/: history.py  main.py  models.py
examples/background-worker/: README.md
examples/fastapi-starter/: .env.example  README.md  forge.config.toml  requirements.txt
examples/fastapi-starter/app/: main.py  models.py  module.py
src/forge/: __init__.py
src/forge/ai/: __init__.py  exceptions.py  models.py  module.py  router.py  structured.py  tokens.py
src/forge/ai/adapters/: __init__.py  anthropic.py  base.py  gemini.py  mock.py  ollama.py  openai.py
src/forge/cache/: __init__.py  _state.py  decorators.py  exceptions.py  module.py
src/forge/cache/backends/: __init__.py  base.py  memory.py  redis.py
src/forge/cli/: __init__.py  main.py  scaffolding.py
src/forge/cli/commands/: __init__.py  add.py  check.py  featureflag.py  init.py  new.py  run.py
src/forge/cli/templates/basic/: .cursorrules.jinja  forge.config.toml.jinja  main.py.jinja  pyproject.toml.jinja
src/forge/cli/templates/fastapi/: .cursorrules.jinja  .env.example.jinja  .gitignore.jinja  main.py.jinja  pyproject.toml.jinja
src/forge/cli/templates/module/: __init__.py.jinja  module.py.jinja  test_module.py.jinja
src/forge/config/: __init__.py  loaders.py  module.py  schema.py  secrets.py
src/forge/core/: __init__.py  async_bridge.py  container.py  context.py  events.py  exceptions.py  module.py  otel.py  redis_health.py  runtime.py
src/forge/crud/: __init__.py  exceptions.py  generator.py  models.py  module.py
src/forge/crud/templates/: crud_router.py.jinja
src/forge/events/: __init__.py  event_types.py  module.py
src/forge/featureflags/: __init__.py  _state.py  evaluator.py  exceptions.py  models.py  module.py  store.py
src/forge/health/: __init__.py  _state.py  checks.py  module.py  router.py
src/forge/jobs/: __init__.py  _state.py  module.py  queue.py  scheduler.py
src/forge/log/: __init__.py  context.py  formatters.py  module.py  proxy.py
src/forge/retry/: __init__.py  backoff.py  circuit.py  module.py
src/forge/storage/: __init__.py  exceptions.py  module.py
src/forge/storage/adapters/: __init__.py  azure.py  base.py  gcs.py  local.py  s3.py
src/forge/validation/: __init__.py  module.py
tests/: conftest.py
tests/integration/: test_full_app.py  test_runtime_lifecycle.py
tests/unit/: test_ai.py  test_cache.py  test_cli.py  test_core.py  test_crud.py  test_events.py  test_featureflags.py  test_health.py  test_jobs.py  test_validation.py
tests/unit/storage/: test_storage.py
