[build-system]
requires = ["hatchling>=1.0"]
build-backend = "hatchling.build"

[project]
name = "forge-runtime"
dynamic = ["version"]
description = "A modular Python infrastructure runtime for config, logging, retries, AI, and more"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["infrastructure", "runtime", "config", "logging", "retry", "ai", "framework"]
authors = [
    { name = "forge-runtime", email = "hello@useforge.dev" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.20"]
redis = ["redis>=5.0"]
all = ["forge-runtime[openai,anthropic,redis]"]

[project.urls]
Homepage = "https://github.com/forge-runtime/forge"
Documentation = "https://useforge.dev/docs"
Repository = "https://github.com/forge-runtime/forge"
Changelog = "https://github.com/forge-runtime/forge/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/forge"]

[tool.hatch.version]
path = "src/forge/_version.py"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107", "D200", "D205", "D212", "D401", "D404", "D406", "D407", "D413", "ANN401", "COM812", "ISC001", "D203", "TRY003", "EM101", "EM102", "BLE001", "B027", "PLC0415", "A001", "A004", "SLF001"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**" = ["S101", "ANN201", "ANN001"]

[tool.ruff.format]

[tool.mypy]
strict = true
python_version = "3.11"
show_error_codes = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = false
no_implicit_reexport = true
ignore_missing_imports = true
disallow_any_unimported = false

[[tool.mypy.overrides]]
module = "forge.*"
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = ["anthropic", "openai", "redis"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
required_plugins = ["pytest-asyncio", "pytest-benchmark"]

[tool.coverage.run]
source = ["src/forge"]
branch = true

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if __name__ == .__main__.:", "raise NotImplementedError"]
