[build-system]
requires = ["hatchling>=1.0"]
build-backend = "hatchling.build"

[project]
name = "forge-runtime"
dynamic = ["version"]
description = "A modular Python infrastructure runtime for config, logging, retries, AI, and more"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["infrastructure", "runtime", "config", "logging", "retry", "ai", "framework"]
authors = [
    { name = "forge-runtime", email = "hello@useforge.dev" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "jinja2>=3.0",
    "typer>=0.12",
    "fastapi>=0.110",
]

[project.scripts]
forge = "forge.cli.main:main"


[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.20"]
gemini = ["google-generativeai>=0.5"]
ollama = ["httpx>=0.27"]
redis = ["redis>=5.0"]
s3 = ["boto3>=1.28"]
gcs = ["google-cloud-storage>=2.0"]
azure = ["azure-storage-blob>=12.0"]
all = ["forge-runtime[openai,anthropic,gemini,ollama,redis,s3,gcs,azure]"]

dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=4.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-benchmark>=5.0",
    "pytest-timeout>=2.3",
    "coverage>=7.6",
    "email-validator>=2.0",
]

[project.urls]
Homepage = "https://github.com/forge-runtime/forge"
Documentation = "https://useforge.dev/docs"
Repository = "https://github.com/forge-runtime/forge"
Changelog = "https://github.com/forge-runtime/forge/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/forge"]

[tool.hatch.version]
path = "src/forge/_version.py"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107", "D200", "D205", "D212", "D401", "D404", "D406", "D407", "D413", "ANN401", "COM812", "ISC001", "D203", "TRY003", "EM101", "EM102", "BLE001", "B027", "PLC0415", "A001", "A004", "SLF001", "TC001", "TC003", "PLR0913", "C901", "PLR0912", "ARG002", "PLR0915", "TRY300", "RUF005", "RET504", "TC002", "FBT001", "FBT002", "FBT003", "E501", "TRY203", "TRY201", "B904", "RSE102", "PTH109", "E402", "B008", "PTH123"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**" = ["S101", "ANN201", "ANN001", "PLR2004", "ARG001", "PERF401", "ASYNC240", "ASYNC230"]
"src/forge/storage/**" = ["ASYNC230", "ASYNC240", "S108"]

[tool.ruff.format]

[tool.mypy]
strict = true
python_version = "3.11"
show_error_codes = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = false
no_implicit_reexport = true
ignore_missing_imports = true
disallow_any_unimported = false

[[tool.mypy.overrides]]
module = "forge.*"
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = ["anthropic", "openai", "redis"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["forge.cli.commands.*", "forge.cli.main"]
disable_error_code = ["untyped-decorator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
required_plugins = ["pytest-asyncio", "pytest-benchmark"]

[tool.coverage.run]
source = ["src/forge"]
branch = true

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if __name__ == .__main__.:", "raise NotImplementedError"]
